# PhotoBooth

./: .gitignore  README.md  button.py  install.sh  mnt-exthd.automount  mnt-exthd.mount  photobooth_liveprocess.service  shutter_button.service  todo.txt  video_fast.webm
src/: CMakeLists.txt  app_gui.cpp  app_gui.hpp  app_live.cpp  app_live.hpp  app_process.cpp  app_process.hpp  app_type.hpp  apptype.hpp  config.cpp  config.hpp  convert.cpp  convert.hpp  face.cpp  face.hpp  face_averager.cpp  face_averager.hpp  face_detector.cpp  face_detector.hpp  face_io.cpp  face_io.hpp  gui.cpp  gui.hpp  guis.cpp  guis.hpp  imaging.cpp  imaging.hpp  led_driver.cpp  led_driver.hpp  main.cpp  morph.cpp  morph.hpp  named_img.hpp  output_paths.cpp  output_paths.hpp  pca.cpp  pca.hpp  shutter_button.cpp  shutter_button.hpp  test_deserialization.cpp  (+2 more)
src/unused/: app_live.hpp
