cmake_minimum_required(VERSION 3.0)
project( PhotoBooth )
find_package( OpenCV REQUIRED )
find_package( dlib REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( photobooth_process main.cpp pca.cpp utils.cpp face_detector.cpp face.cpp convert.cpp morph.cpp app_gui.cpp face_averager.cpp )
add_executable( test_deserialization test_deserialization.cpp pca.cpp utils.cpp face_detector.cpp face.cpp convert.cpp morph.cpp app_gui.cpp face_averager.cpp )
target_link_libraries( photobooth_process ${OpenCV_LIBS} dlib::dlib)
target_link_libraries( test_deserialization ${OpenCV_LIBS} dlib::dlib)
