cmake_minimum_required(VERSION 3.0)
project( PhotoBooth )
find_package( OpenCV REQUIRED )
#find_package( dlib REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_subdirectory( ../pigpio pigpio_build )
#set(DLIB_NO_GUI_SUPPORT ON CACHE BOOL "disable dlib gui -- unused")
add_subdirectory( ../dlib-19.23 dlib_build )
add_executable( photobooth_process main.cpp utils.cpp face_detector.cpp face.cpp convert.cpp morph.cpp app_gui.cpp app_process.cpp app_live.cpp face_averager.cpp imaging.cpp config.cpp shutter_button.cpp)
add_executable( test_deserialization test_deserialization.cpp utils.cpp face_detector.cpp face.cpp convert.cpp )
target_compile_features( photobooth_process PRIVATE cxx_std_17 )
target_link_libraries( photobooth_process ${OpenCV_LIBS} dlib::dlib pigpio)
target_link_libraries( test_deserialization ${OpenCV_LIBS} dlib::dlib)
